force-app/main/default/objects/Employee_Application__c/Employee_Application__c.object-meta.xml
<CustomObject>
    <label>Employee Application</label>
    <nameField>
        <displayFormat>EA-{000}</displayFormat>
        <label>Employee Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>