force-app/main/default/objects/Employee_Application__c/fields/Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Phone_no__c</fullName>
    <label>Phone no</label>
    <type>Phone</type>
</CustomField>