force-app/main/default/objects/Employee_Application__c/listViews/CQ_Manager_Employee_Application.listView-meta.xml
<ListView>
    <fullName>CQ_Manager_Employee_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>CQ Manager</label>
    <queue>CQ_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>